Fixed bug with alignment of "Attributive" form item in the annotator under Google Chrome.

--- a/lingwo_korpus/annotator.less
+++ b/lingwo_korpus/annotator.less
@@ -12,7 +12,7 @@
     background-color: red;
 }
 
-#lingwo-korpus-entry-view input {
+#lingwo-korpus-entry-view input.form-text {
   width: 270px;
 }
 
